manifests/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sidecar-injector-webhook-cfg
  labels:
    app: sidecar-injector
webhooks:
  - name: com.epam.admission-registry-mutate
    clientConfig:
      service:
        name: admission-registry
        namespace: default
        path: "/mutate"
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR2akNDQXFhZ0F3SUJBZ0lVRGpzdllqbTJi
[...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["apps", ""]
        apiVersions: ["v1"]
        resources: ["deployments","statefulsets"]
    admissionReviewVersions: [ "v1" ]
    sideEffects: None
    namespaceSelector:
      matchLabels:
        sidecar-injection: enabled
