manifests/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission-registry
webhooks:
  - name: com.epam.admission-registry
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
    clientConfig:
      service:
        namespace: default
        name: admission-registry
        path: "/validate"
      #caBundle: CA_BUNDLE （cat ca.pem | base64）
      caBundle: >
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR2akNDQXFhZ0F3SUJBZ0lVSFZpQnhwRXlq
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
